force-app/main/default/objects/Account/fields/Billing_Municipality__c.field-meta.xml
<CustomField>
    <fullName>Billing_Municipality__c</fullName>
    <label>Billing Municipality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>