force-app/main/default/objects/Account/fields/Exclude_From_Monitoring_Set__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_Monitoring_Set__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude From Monitoring Set</label>
    <type>Checkbox</type>
</CustomField>