force-app/main/default/objects/Account/fields/IsInMonitoringSet__c.field-meta.xml
<CustomField>
    <fullName>IsInMonitoringSet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsInMonitoringSet</label>
    <type>Checkbox</type>
</CustomField>