force-app/main/default/objects/Account/fields/Latest_Dept_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Latest_Dept_Ratio__c</fullName>
    <label>Latest Dept Ratio</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>