force-app/main/default/objects/Account/fields/Latest_Equity_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Latest_Equity_Ratio__c</fullName>
    <label>Latest Equity Ratio</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>