force-app/main/default/objects/Account/fields/Latest_Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>Latest_Gross_Margin__c</fullName>
    <label>Latest Gross Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>