force-app/main/default/objects/Account/fields/Latest_Liquidity_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Latest_Liquidity_Ratio__c</fullName>
    <label>Latest Liquidity Ratio</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>