force-app/main/default/objects/Account/fields/Latest_Period__c.field-meta.xml
<CustomField>
    <fullName>Latest_Period__c</fullName>
    <label>Latest Period</label>
    <type>Date</type>
</CustomField>