force-app/main/default/objects/Account/fields/Latest_Profit_Margin__c.field-meta.xml
<CustomField>
    <fullName>Latest_Profit_Margin__c</fullName>
    <label>Latest Profit Margin</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>