force-app/main/default/objects/Account/fields/Latest_Return_On_Assets__c.field-meta.xml
<CustomField>
    <fullName>Latest_Return_On_Assets__c</fullName>
    <label>Latest Return On Assets</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>