force-app/main/default/objects/Account/fields/Latest_Return_On_Equity__c.field-meta.xml
<CustomField>
    <fullName>Latest_Return_On_Equity__c</fullName>
    <label>Latest Return On Equity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>