force-app/main/default/objects/Account/fields/Latest_Total_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Latest_Total_Turnover__c</fullName>
    <label>Latest Total Turnover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>