force-app/main/default/objects/Account/fields/Latest_Year_Result__c.field-meta.xml
<CustomField>
    <fullName>Latest_Year_Result__c</fullName>
    <label>Latest Year Result</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>