force-app/main/default/objects/Account/fields/Legalform__c.field-meta.xml
<CustomField>
    <fullName>Legalform__c</fullName>
    <label>Legalform</label>
    <length>255</length>
    <type>Text</type>
</CustomField>