force-app/main/default/objects/Account/fields/Legalform_Code__c.field-meta.xml
<CustomField>
    <fullName>Legalform_Code__c</fullName>
    <label>Legalform Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>