force-app/main/default/objects/Account/fields/Max_Nr_Of_Employees_HQ__c.field-meta.xml
<CustomField>
    <fullName>Max_Nr_Of_Employees_HQ__c</fullName>
    <label>Max Nr Of Employees HQ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>