force-app/main/default/objects/Account/fields/Min_Nr_Of_Employees_HQ__c.field-meta.xml
<CustomField>
    <fullName>Min_Nr_Of_Employees_HQ__c</fullName>
    <label>Min Nr Of Employees HQ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>