force-app/main/default/objects/Account/fields/Other_Business_Category__c.field-meta.xml
<CustomField>
    <fullName>Other_Business_Category__c</fullName>
    <label>Other Business Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>