force-app/main/default/objects/Account/fields/Period_Duration_In_Months__c.field-meta.xml
<CustomField>
    <fullName>Period_Duration_In_Months__c</fullName>
    <label>Period Duration In Months</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>