force-app/main/default/objects/Account/fields/Primary_Business_Category__c.field-meta.xml
<CustomField>
    <fullName>Primary_Business_Category__c</fullName>
    <label>Primary Business Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>