force-app/main/default/objects/Account/fields/Share_Capital__c.field-meta.xml
<CustomField>
    <fullName>Share_Capital__c</fullName>
    <label>Share Capital</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>