force-app/main/default/objects/Account/fields/Stock_Exchange_Listed__c.field-meta.xml
<CustomField>
    <fullName>Stock_Exchange_Listed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stock Exchange Listed</label>
    <type>Checkbox</type>
</CustomField>