force-app/main/default/objects/Account/fields/Turnover_Group__c.field-meta.xml
<CustomField>
    <fullName>Turnover_Group__c</fullName>
    <label>Turnover Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>