force-app/main/default/objects/Account/fields/Valitive_Import_Process_Id__c.field-meta.xml
<CustomField>
    <fullName>Valitive_Import_Process_Id__c</fullName>
    <label>Valitive Import Process Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>