force-app/main/default/objects/Account/fields/Valitive_Import_Process_Status__c.field-meta.xml
<CustomField>
    <fullName>Valitive_Import_Process_Status__c</fullName>
    <label>Valitive Import Process Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Awaiting Initial Sync</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>